--- a/SporSalonuveSporcuOtomasyonu/SporSalonuveSporcuOtomasyonu.csproj
+++ b/SporSalonuveSporcuOtomasyonu/SporSalonuveSporcuOtomasyonu.csproj
@@ -8,4 +8,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bunifu.UI.WinForms" Version="5.3.0" />
+    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.3.2" />
+  </ItemGroup>
+
 </Project>
